@@ -2875,16 +2875,28 @@ d[integer(), "a"] <- 2
 ## warned in 3.0.3.
 
 
-## PR15781
+## PR#15781
 options(foo = 1)
 print(options(foo = NULL))
 ## printed wrong value in 3.1.0
+
 
 ## getParseData bug reported by Andrew Redd
 raw <- "
 function( a   # parameter 1
          , b=2 # parameter 2
          ){a+b}"
-p <- parse(text=raw)
+p <- parse(text = raw)
 getParseData(p)
 ## Got some parents wrong
+
+
+## wish of PR#15819
+set.seed(123); x <- runif(10); y <- rnorm(10)
+op <- options(OutDec = ",")
+fit <- lm(y ~ x)
+summary(fit)
+options(op)
+## those parts using formatC still used a decimal point.
+
+
